--- a/pipeline/Parquet_2_snow_Stage.json
+++ b/pipeline/Parquet_2_snow_Stage.json
@@ -19,7 +19,7 @@
 						"type": "ParquetSource",
 						"storeSettings": {
 							"type": "AzureBlobStorageReadSettings",
-							"recursive": true,
+							"recursive": false,
 							"enablePartitionDiscovery": false
 						},
 						"formatSettings": {
@@ -35,7 +35,7 @@
 					"enableStaging": true,
 					"stagingSettings": {
 						"linkedServiceName": {
-							"referenceName": "ls_storage_azure_bloc",
+							"referenceName": "ls_storage_sas_auth",
 							"type": "LinkedServiceReference"
 						}
 					},
@@ -122,10 +122,7 @@
 						"parameters": {
 							"container_name": "stagedata",
 							"folder_name": "stagedata",
-							"file_name": {
-								"value": "@concat(pipeline().parameters.table_name)",
-								"type": "Expression"
-							}
+							"file_name": "SPL.parquet"
 						}
 					}
 				],
