--- a/pipeline/Parquet_2_snow_DimLocation.json
+++ b/pipeline/Parquet_2_snow_DimLocation.json
@@ -122,7 +122,7 @@
 						"referenceName": "Snow_Stage_DS",
 						"type": "DatasetReference",
 						"parameters": {
-							"schema_name": "SCHEMA",
+							"schema_name": "STAGE",
 							"table_name": "DIM_LOCATION"
 						}
 					}
